# GameEngine

./: .gitignore  .gitmodules  Doxyfile  PvA_template.md  README.md  ZIPREADME.md  codestandard.tex  codestandard.txt  mySave.json  poa.fdb_latexmk  poa.fls  research.tex  run_callgrind.sh  run_debug.sh  run_standard.sh  run_tests.sh  urenverantwoording_template.md
code/: .clang-format  .clangd  CCRakNetSlidingWindow.h##2036374beaa4fa45398e28ee928c1d2a.gcov  CMakeLists.txt  DS_ByteQueue.cpp##28425b2aa6a1a71350d5aae4cadfa4c6.gcov  DS_Heap.h##eee054fb2a5f6b11fa56a3821221c6f0.gcov  DS_MemoryPool.h##edfd56ebf135611e39cdc6ab12379609.gcov  DS_OrderedList.h##eb50293768328827e30c06fa21df4dde.gcov  DS_RangeList.h##edb175085b19f69acdc0c47f5bcbd85c.gcov  HighlevelMappings.json  RakMemoryOverride.cpp##d41c83585f5211c684d2bed9df3833c5.gcov  RakSleep.cpp##a5021b7ebc30b97a298d3cec4a8b4a82.gcov  ReliabilityLayer.cpp##0e89a59715d1aa89462e13600ac5f2a5.gcov  ReliabilityLayer.h##fca080ceec9fbdb742a04d92d3f605ad.gcov  \  aligned_buffer.h##b1b5cc9c94532b5472050183821aaaf6.gcov  alloc_traits.h##ab38c21af5b1d06b248074e58c753bc8.gcov  alloc_traits.h##d541e135d403a6cb94abd40d1067341a.gcov  allocated_ptr.h##afd7d750a587f929528a3ed7c351c765.gcov  allocator.h##9d1214fc60a37c076d6c6113134da7b5.gcov  atomicity.h##8f493cde9507b59f628be1ce69a4321f.gcov  basic_string.h##5dd4601f9d7cd1b4773b919df7ddea62.gcov  basic_string.tcc##6160c2985dbcde4f577b6de1eb6f76db.gcov  blackboard.cpp##c2c0167f2de12558fbbbfe711b8f7958.gcov  blackboard.h##94a83fd72e1ece0926f5806ac89c6526.gcov  build_debug.sh  build_standard.sh  char_traits.h##d11494846d90533fcd30a0f4261c7d5b.gcov  compile_commands.json  contexts.json  cpp_type_traits.h##7b69e5f52ea4878bc0fe4dc0db2ddbc7.gcov  debug_run.sh  defined_actions.json  exceptions.h##781b494753650c45d196a4474386917e.gcov  expected.hpp##b52f629f79a1c78a7a2cb86b164bf291.gcov  hashtable.h##93c1740b37a888c558e0833bc8021c27.gcov  hashtable_policy.h##861b3b14a64719220922ea551e209119.gcov  initializer_list##50ecf921431b7fa13c9f546c63b5be4e.gcov  json.hpp##1a35c5895081cfc4b49c2c2523f57225.gcov  locked_reference.hpp##89d1353512048b44250fbe8f3d0beaf7.gcov  (+31 more)
code/inc/: Animation.h  AudioManager.h  AudioResourceManager.h  AudioSource.h  Camera.h  CameraDebugOverlay.h  Color.h  Component.h  ComponentFactory.h  ComponentPathPair.h  Configuration.h  ContextManager.h  Controller.h  DefinedAction.h  EngineBravo.h  Event.h  EventManager.h  FPSCounterBehaviourScript.h  FRect.h  FSConverter.h  FloatSaveField.hpp  GameObject.h  IAudioFacade.h  IBehaviourScript.h  IComponent.h  IKeyListener.h  Input.h  InputStructs.h  Inputs.h  IntSaveField.hpp  LevelBuilder.h  MapToGraph.h  MixerContainer.h  MixerFacade.h  NetworkBehaviour.h  NetworkClient.h  NetworkHost.h  NetworkManager.h  NetworkObject.h  NetworkSceneManager.h  (+46 more)
code/inc/AI/: Pathfinding.h
code/inc/Audio/: AudioManager.h  AudioResourceManager.h  AudioSource.h  IAudioFacade.h  MixerContainer.h  MixerFacade.h
code/inc/BehaviourScripts/: IBehaviourScript.h  IButtonBehaviourScript.h
code/inc/Components/: Animator.h  AudioSource.h  BoxCollider.h  CircleCollider.h  Collider.h  Component.h  IBehaviourScript.h  IButtonBehaviourScript.h  ParticleEmitter.h  RigidBody.h  Sprite.h  Texture.h
code/inc/Engine/: AnimationManager.h  EngineBravo.h  PhysicsManager.h  ResourceManager.h  SaveGameManager.h  SceneManager.h  UIManager.h  UpdateQueue.h
code/inc/GameObject/: GameObject.h
code/inc/Global/: Color.h  Debug.h  FSConverter.h  Point.h  ScopedTimer.h  Time.h
code/inc/Input/: IMouseListener.h  Input.h  InputStructs.h
code/inc/Network/: INetworkBehaviour.h  INetworkPrefab.h  INetworkSerializable.h  NetworkBehaviour.h  NetworkClient.h  NetworkHost.h  NetworkInformation.h  NetworkManager.h  NetworkObject.h  NetworkRegister.h  NetworkSerializable.h  NetworkServer.h  NetworkSharedFunctions.h  NetworkTransform.h  NetworkTypeIDGenerator.h  NetworkVariable.h
code/inc/Particles/: Particle.h  ParticleEmitter.h  ParticleSystem.h
code/inc/Physics/: BodyProxy.h  BodyType.h  BoxCollider.h  CircleCollider.h  Collider.h  PhysicsEngine.h  RigidBody.h  World.h
code/inc/Rendering/: Animation.h  Camera.h  RenderSystem.h  Renderer.h  Sprite.h  Window.h
code/install/: Box2D_install.sh  GitSubModule.sh  Install.sh  SDL2_Mixer.sh  SDL2_image_install.sh  SDL2_install.sh  SDL2_mixer_install.sh  SLikeNet_install.sh  TinyTmx_install.sh  TmxLite_install.sh
code/output/: mySave.json
code/src/: Animation.cpp  AnimationManager.cpp  AudioManager.cpp  AudioSource.cpp  Camera.cpp  CanvasBehaviourScript.cpp  ComponentFactory.cpp  Controller.cpp  EngineBravo.cpp  EventManager.cpp  FPSCounterBehaviourScript.cpp  FSConverter.cpp  FloatSaveField.cpp  GameObject.cpp  InitBehaviourScript.cpp  Input.cpp  InputStructs.cpp  Inputs.cpp  IntSaveField.cpp  LevelBuilder.cpp  MapToGraph.cpp  NetworkClient.cpp  NetworkManager.cpp  NetworkObject.cpp  NetworkServer.cpp  NetworkTransform.cpp  Particle.cpp  ParticleEmitter.cpp  ParticleSystem.cpp  PhysicsComponent.cpp  PlayerBehaviourScript.cpp  PlayerStatsBehaviourScript.cpp  RenderComponent.cpp  RenderSystem.cpp  Renderer.cpp  ResourceManager.cpp  SaveArray.cpp  SaveField.cpp  SaveGame.cpp  SaveGameManager.cpp  (+21 more)
code/test/: CMakeLists.txt  ConcreteNetworkBehaviour.cpp  ConcreteNetworkBehaviour.h  ConcreteNetworkSerializable.cpp  ConcreteNetworkSerializable.h  test_animation.cpp  test_audio.cpp  test_behaviourscript.cpp  test_button.cpp  test_buttonbehaviourscripts.cpp  test_camera.cpp  test_component.cpp  test_configuration.cpp  test_eventmanager.cpp  test_levelbuilder.cpp  test_main.cpp  test_maptograph.cpp  test_networking.cpp  test_particle.cpp  test_particleemitter.cpp  test_particlesystem.cpp  test_pathfinding.cpp  test_physics.cpp  test_physicssystem.cpp  test_renderer.cpp  test_rendersystem.cpp  test_save.cpp  test_scene.cpp  test_scenemanager.cpp  test_sprite.cpp  test_text.cpp  test_tilemapparser.cpp  test_time.cpp  test_transform.cpp  test_uimanager.cpp  test_updateQueue.cpp  test_vector2.cpp  test_window.cpp
code/testGame/: CMakeLists.txt
(+2194 files in other folders)
